# screen-muxer

./: LICENSE  README.md  screen-muxer.cabal
src/main/haskell/: smuxer.hs
