name:                   screen-muxer
version:                0.0.1
synopsis:               Multiplexes commands to a GNU screen session window range.
description:            Multiplexes commands to a GNU screen session window range.
license:                GPL-3
author:                 Edward Tjörnhammar <ed@cflags.cc>
category:               System
build-type:             Simple
cabal-version:          >= 1.8
executable smuxer
           main-is:             smuxer.hs
           hs-source-dirs:      src/main/haskell
           extensions:          OverloadedStrings
                                , ExtendedDefaultRules
                                , QuasiQuotes
                                , CPP
           ghc-options:         -Wall -fno-warn-type-defaults
           build-depends:       base >= 4.5
                                , text >= 0.11.2
                                , shakespeare-text >= 1.0.0
                                , shelly >= 0.15.4 && < 1
